--- a/ms1-dev.yml
+++ b/ms1-dev.yml
@@ -1,3 +1,46 @@
 ms1:
   profile: I'm dev ms1
   comment: Hello! updated by Spring Bus with webhook!
+
+
+spring:
+    profiles: dev
+    # kafka:
+    #     # cluster구성 시 아래와 같이 콤마로 표현
+    #     bootstrap-servers: localhost:9092
+    #     consumer:
+    #         group-id: group_id_ms2
+    #         auto-offset-reset: earliest
+    #         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    #         value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    # producer:
+    #     retries: 0
+    #     acks: all
+    #     key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    #     value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+    sleuth:
+        sampler:
+            probability: 1.0
+    zipkin:
+        base-url: http://localhost:9411/
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: '*'
+                exclude: env, beans
+            base-path: /application
+            path-mapping.beans: beanscheck
+            path-mapping.health: healthcheck
+
+server:
+    port: 8089
+
+eureka:
+    client:
+        service-url:
+            defaultZone: http://localhost:9999/eureka/
+        register-with-eureka: true
+        fetch-registry: true
