--- a/ms2-dev.yml
+++ b/ms2-dev.yml
@@ -24,11 +24,11 @@ spring:
     zipkin:
         base-url: http://localhost:9411/
 
-# management:
-#     endpoints:
-#         web:
-#             exposure:
-#                 include: '*'
+management:
+    endpoints:
+        web:
+            exposure:
+                include: '*'
 
 server:
     port: 80
